Fix horizontal scroll on mobile devices

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .round-logo {
   filter: invert(24%) sepia(8%) saturate(867%) hue-rotate(197deg) brightness(89%) contrast(86%);
 }
